# QDMI

./: .gitignore  .qdmi-config  CMakeLists.txt  README.md  client_2control_8h.html  client_2control_8h.js  client_2control_8h_source.html  client_2query_8h.html  client_2query_8h.js  client_2query_8h_source.html  client_8h.html  client_8h_source.html  device_2control_8h.html  device_2control_8h.js  device_2control_8h_source.html  device_2query_8h.html  device_2query_8h.js  device_2query_8h_source.html  device_8h.html  device_8h_source.html  dir_0d7cf804146230722880657c9c064103.html  dir_0d7cf804146230722880657c9c064103.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_58e995d5ab4b554909ec3582c9a19381.html  dir_58e995d5ab4b554909ec3582c9a19381.js  dir_cd5bb82c711be267bcb0734ba15e6a7c.html  dir_cd5bb82c711be267bcb0734ba15e6a7c.js  dir_e2a3c7222bbd36e7bf5cc7ce1aed8f55.html  dir_e2a3c7222bbd36e7bf5cc7ce1aed8f55.js  doxygen_crawl.html  driver_8h.html  driver_8h_source.html  enums_8h.html  enums_8h.js  enums_8h_source.html  files.html  files_dup.js  globals.html  globals_enum.html  globals_eval.html  (+16 more)
cmake/: Findqinfo.cmake
include/: qdmi.h
include/qdmi/: qdmi.h
planqc_api/: README.md  openapi-generator-config.yml  planqc.qdmi-config  planqc_openapi_v1.yml
search/: all_0.js  all_1.js  all_4.js  all_5.js  all_6.js  enums_0.js  enumvalues_0.js  files_1.js  files_3.js  functions_0.js  pages_0.js  pages_3.js  pages_4.js  searchdata.js  typedefs_0.js
src/: qdmi_backend_planqc.c  qdmi_backend_planqc.h  qdmi_backend_q7.c  qdmi_backend_qlm.c  qdmi_backend_wmi_sim.c  qdmi_core.c  qdmi_internal.c  qdmi_internal.h  qdmi_stubs.c
src/private/: qdmi_internal.h
testing/: openclose.c  qdmi_test_planqc.c
